# plotpot

./: .editorconfig  .gitignore  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-tokens.yaml  static.yaml  static.yml
data/: tokens.json
scripts/: get_telegram_session.py  make-pages.cjs  make-pages.py  make_pages.py  make_telegram_channels.py
templates/: index.ejs  index.html.jinja  token.ejs  token.html.jinja
