[tool.poetry]
name = "plotpot"
version = "0.0.0"
description = ""
authors = ["plotpot-dev <169992072+plotpot-dev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
Telethon = "^1.35.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
